<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior=
        "@string/appbar_scrolling_view_behavior"
    tools:context="com.example.machoene.donotes.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:listitem="@layout/list_note" />
</LinearLayout>
